--- a/front/index.html
+++ b/front/index.html
@@ -14,12 +14,25 @@
 
     <!-- Vue Loader -->
     <script src="https://unpkg.com/http-vue-loader"></script>
+    
+    <!-- Vuetify -->
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@3.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
 </head>
 
 <body>
 
     <div id="app">
+        <v-app>
+            <v-content>
+                <v-container>hello, vuetify</v-container>
+            </v-content>
+        </v-app>
+        
         <ul>
             <router-link tag="li" to="/">page1</router-link>
             <router-link tag="li" to="/page2">page2</router-link>
