--- a/front/index.html
+++ b/front/index.html
@@ -34,8 +34,8 @@
         </v-app>
         
         <ul>
-            <router-link tag="li" to="/">page1</router-link>
-            <router-link tag="li" to="/page2">page2</router-link>
+            <router-link tag="li" to="/">top</router-link>
+            <router-link tag="li" to="/review">review</router-link>
         </ul>
         <router-view></router-view>
     </div>
