--- a/front/index.html
+++ b/front/index.html
@@ -22,22 +22,24 @@
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
+    
+
 </head>
 
 <body>
 
     <div id="app">
-        <v-app>
+        <!-- <v-app>
             <v-content>
                 <v-container>hello, vuetify</v-container>
             </v-content>
-        </v-app>
+        </v-app> -->
         
         <ul>
             <router-link tag="li" to="/">top</router-link>
             <router-link tag="li" to="/review">review</router-link>
         </ul>
-        <router-view></router-view>
+        <router-view>hoge</router-view>
     </div>
 
     <script src="./main.js"></script>
