--- a/front/index.html
+++ b/front/index.html
@@ -30,17 +30,8 @@
 <body>
 
     <div id="app">
-        <!-- <v-app>
-            <v-content>
-                <v-container>hello, vuetify</v-container>
-            </v-content>
-        </v-app> -->
-        
-        <ul>
-            <router-link tag="li" to="/">top</router-link>
-            <router-link tag="li" to="/review">review</router-link>
-        </ul>
-        <router-view>hoge</router-view>
+        <top-component></top-component>
+        <review-component></review-component>
     </div>
 
     <script src="./main.js"></script>
