--- a/front/index.html
+++ b/front/index.html
@@ -25,11 +25,7 @@
     <div id="app">
         <top-component></top-component>
         <review-component></review-component>
-	<div>
-            <input v-model="reviwed_menu_id" placeholder="1" required>
-            <input v-model="review_detail" placeholder="ここにレビュー本文を入力" required>
-            <button v-on:click="PostReviewData">送信</button>
-        </div>
+        
     </div>
 
 </body>
@@ -58,7 +54,11 @@
     })
 
     Vue.component('review-component', {
-        template: '<h1>hello 1</h1>',
+        template:`<div>
+	<input v-model="reviewed_menu_id" placeholder="1" required>
+        <input v-model="review_detail" placeholder="ここにレビュー本文を入力" required>
+        <button v-on:click="PostReviewData">送信</button>
+	</div>`,
         data: function(){
             return {
                 Reviews: {},
@@ -83,10 +83,10 @@
 		            console.log(this.Reviews[0])
                 })
             },
-            PostReviewData: function(id, detail){
+            PostReviewData: function(){
                 const Url = "https://172.16.16.7:8086/api/post-review"
-                this.request.reviewed_menu_id = id
-                this.request.review_detail = detail
+                console.log(this.reviewed_menu_id)
+		console.log(this.review_detail)
                 axios.post(Url, {
 		    reviewed_menu_id: this.reviewed_menu_id,
 		    review_detail: this.review_detail
