--- a/front/index.html
+++ b/front/index.html
@@ -56,6 +56,7 @@
     })
 
     Vue.component('review-component', {
+        delimiters: ['[[', ']]'],
         template: `<div>
             <div class="panel panel-default mt-5">
     <div class="panel-heading"><h3>レビューを書く</h3></div>
